add register, load data

--- a/Exercise/Ass1_March/restful-client/public_html/main.html
+++ b/Exercise/Ass1_March/restful-client/public_html/main.html
@@ -10,6 +10,7 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="styles/bootstrap.css" rel="stylesheet"/>
+        <link href="styles/materialPreloader.css" rel="stylesheet" />
         <link href="styles/rotating-card.css" rel="stylesheet"/>
         <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
         <link href="styles/main.css" rel="stylesheet"/>
@@ -24,94 +25,12 @@ and open the template in the editor.
                 <li><a href='#'>Contact</a></li>
             </ul>
         </div>
-        <div class="main-container clearfix">
-            <div class="col-md-4 col-sm-6">
-                <div class="card-container manual-flip">
-                    <div class="card">
-                        <div class="front">
-                            <div class="cover">
-                                <img src="images/rotating_card_thumb.png"/>
-                            </div>
-                            <div class="user">
-                                <img class="img-circle" src="images/rotating_card_profile2.png"/>
-                            </div>
-                            <div class="content">
-                                <div class="main">
-                                    <h3 class="name">Andrew Mike</h3>
-                                    <p class="profession">Web Developer</p>
-                                    <h5><i class="fa fa-map-marker fa-fw text-muted"></i> Bucharest, Romania</h5>
-                                    <h5><i class="fa fa-building-o fa-fw text-muted"></i> Creative Tim Inc. </h5>
-                                    <h5><i class="fa fa-envelope-o fa-fw text-muted"></i> mike@creative-tim.com</h5>
-                                </div>
-                                <div class="footer">
-                                    <button class="btn btn-simple rotate-btn">
-                                        <i class="fa fa-mail-forward"></i> Edit Information
-                                    </button>
-                                </div>
-                            </div>
-                        </div> <!-- end front panel -->
-                    </div> <!-- end card -->
-                </div> <!-- end card-container -->
-            </div> <!-- end col sm 3 -->
-            <div class="col-md-4 col-sm-6">
-                <div class="card-container manual-flip">
-                    <div class="card">
-                        <div class="front">
-                            <div class="cover">
-                                <img src="images/rotating_card_thumb.png"/>
-                            </div>
-                            <div class="user">
-                                <img class="img-circle" src="images/rotating_card_profile2.png"/>
-                            </div>
-                            <div class="content">
-                                <div class="main">
-                                    <h3 class="name">Andrew Mike</h3>
-                                    <p class="profession">Web Developer</p>
-                                    <h5><i class="fa fa-map-marker fa-fw text-muted"></i> Bucharest, Romania</h5>
-                                    <h5><i class="fa fa-building-o fa-fw text-muted"></i> Creative Tim Inc. </h5>
-                                    <h5><i class="fa fa-envelope-o fa-fw text-muted"></i> mike@creative-tim.com</h5>
-                                </div>
-                                <div class="footer">
-                                    <button class="btn btn-simple rotate-btn">
-                                        <i class="fa fa-mail-forward"></i> Edit Information
-                                    </button>
-                                </div>
-                            </div>
-                        </div> <!-- end front panel -->
-                    </div> <!-- end card -->
-                </div> <!-- end card-container -->
-            </div> <!-- end col sm 3 -->
-            <div class="col-md-4 col-sm-6">
-                <div class="card-container manual-flip">
-                    <div class="card">
-                        <div class="front">
-                            <div class="cover">
-                                <img src="images/rotating_card_thumb.png"/>
-                            </div>
-                            <div class="user">
-                                <img class="img-circle" src="images/rotating_card_profile2.png"/>
-                            </div>
-                            <div class="content">
-                                <div class="main">
-                                    <h3 class="name">Andrew Mike</h3>
-                                    <p class="profession">Web Developer</p>
-                                    <h5><i class="fa fa-map-marker fa-fw text-muted"></i> Bucharest, Romania</h5>
-                                    <h5><i class="fa fa-building-o fa-fw text-muted"></i> Creative Tim Inc. </h5>
-                                    <h5><i class="fa fa-envelope-o fa-fw text-muted"></i> mike@creative-tim.com</h5>
-                                </div>
-                                <div class="footer">
-                                    <button class="btn btn-simple rotate-btn">
-                                        <i class="fa fa-mail-forward"></i> Edit Information
-                                    </button>
-                                </div>
-                            </div>
-                        </div> <!-- end front panel -->
-                    </div> <!-- end card -->
-                </div> <!-- end card-container -->
-            </div> <!-- end col sm 3 -->
+        <div class="main-container clearfix card-list">
+
         </div>
 
         <script src="scripts/libs/jquery-1.9.1.min.js"></script>
+        <script src="scripts/libs/jquery.tmpl.min.js"></script>
         <script src="scripts/libs/bootstrap.min.js"></script>
         <script src="scripts/libs/materialPreloader.js"></script>
 
