--- a/Exercise/Ass1_March/restful-client/public_html/main.html
+++ b/Exercise/Ass1_March/restful-client/public_html/main.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
         <title>My Application</title>
@@ -21,8 +16,7 @@ and open the template in the editor.
     <body>
         <div id='cssmenu'>
             <ul>
-                <li class='active'><a href='#'>Home</a></li>
-                <li><a href='#'>Products</a></li>
+                <li class='active'><a href='#' style="color: yellow; font-weight: bold;" id="nav-home">Home</a></li>
                 <li><a href='#teste' id="nav-location">Show my Position</a></li>
                 <li><a href='#' id="nav-createuser"  data-toggle="modal" data-target="#createmodel">Create user</a></li>
             </ul>
@@ -86,6 +80,7 @@ and open the template in the editor.
                             <div class="form-group">
                                 <div class="col-sm-offset-2 col-sm-10">
                                     <button type="button" class="btn btn-default" id="save-btn">Save</button>
+                                    <button type="button" class="btn btn-danger" id="del-btn">Delete</button>
                                 </div>
                             </div>
                         </form>
@@ -171,8 +166,7 @@ and open the template in the editor.
         </div>
         <!--New model END-->
 
-
-        <!--<a id="demo03" class="btn" href="#teste">03</a>-->
+        <!--Location modal-->
         <div id="teste" class="animated teste-on bounceInUp" style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px; overflow-y: auto; z-index: 9999; opacity: 1; animation-duration: 0.5s; background-color: rgb(57, 190, 185); display: none; z-index: 2;">
             <div id="closebt-container" class="close-teste">
                 <img class="closebt" src="images/closebt.svg">
@@ -194,10 +188,5 @@ and open the template in the editor.
 
         <!--Main script-->
         <script src="scripts/main.js"></script>
-
-        <script>
-            //demo 03
-           
-        </script>
     </body>
 </html>
