--- a/Exercise/Ass1_March/restful-client/public_html/main.html
+++ b/Exercise/Ass1_March/restful-client/public_html/main.html
@@ -35,6 +35,10 @@
                     </div>
                     <div class="modal-body" style='padding:10px 50px;'>
                         <form class="form-horizontal">
+                            <div class="avatar-picker" id="editavatar">
+                                <label for="filePicker">Avatar</label>
+                                <input type="file" id="filePicker" class="filePicker">
+                            </div>
                             <div class="form-group">
                                 <label for="inputName" class="col-sm-2 control-label">Name</label>
                                 <div class="col-sm-10">
@@ -103,6 +107,10 @@
                     </div>
                     <div class="modal-body" style='padding:10px 50px;'>
                         <form class="form-horizontal">
+                            <div class="avatar-picker" id="createtavatar">
+                                <label for="filePickerc">Avatar</label>
+                                <input type="file" id="filePickerc" class="filePicker">
+                            </div>
                             <div class="form-group">
                                 <label for="inputNamec" class="col-sm-2 control-label">Name</label>
                                 <div class="col-sm-10">
@@ -184,7 +192,8 @@
         <script src="scripts/libs/materialPreloader.js"></script>
         <script src="scripts/libs/plugins.js"></script>
         <script src="scripts/libs/sweetalert.min.js"></script>
-        <script src="scripts/libs/animatedModal.min.js"></script>       
+        <script src="scripts/libs/animatedModal.min.js"></script> 
+        <script src="scripts/libs/dropzone.js"></script> 
 
         <!--Main script-->
         <script src="scripts/main.js"></script>
