--- a/Exercise/Ass1_March/restful-client/public_html/main.html
+++ b/Exercise/Ass1_March/restful-client/public_html/main.html
@@ -78,7 +78,13 @@
                             <div class="form-group">
                                 <label for="inputPassword" class="col-sm-2 control-label">Password</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" id="inputPassword" placeholder="Password">
+                                    <input type="text" class="form-control" id="inputPassword" placeholder="Password" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPriority" class="col-sm-2 control-label">Priority</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="inputPriority" placeholder="Status">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -144,19 +150,25 @@
                             <div class="form-group">
                                 <label for="inputUsernamec" class="col-sm-2 control-label">Username</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" id="inputUsernamec" placeholder="Username">
+                                    <input type="text" class="form-control" id="inputUsernamec" placeholder="Username" required>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="inputPasswordc" class="col-sm-2 control-label">Password</label>
                                 <div class="col-sm-10">
-                                    <input type="password" class="form-control" id="inputPasswordc" placeholder="Password">
+                                    <input type="password" class="form-control" id="inputPasswordc" placeholder="Password" required>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="inputPasswordCofirmc" class="col-sm-2 control-label">Confirm Password</label>
                                 <div class="col-sm-10">
-                                    <input type="password" class="form-control" id="inputPasswordCofirmc" placeholder="Password">
+                                    <input type="password" class="form-control" id="inputPasswordCofirmc" placeholder="Password" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPriorityc" class="col-sm-2 control-label">Priority</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="inputPriorityc" placeholder="Status">
                                 </div>
                             </div>
                             <div class="form-group">
