add username tab

--- a/Exercise/Ass1_March/restful-client/public_html/main.html
+++ b/Exercise/Ass1_March/restful-client/public_html/main.html
@@ -16,7 +16,8 @@
     <body>
         <div id='cssmenu'>
             <ul>
-                <li class='active'><a href='#' style="color: yellow; font-weight: bold;" id="nav-home">Home</a></li>
+                <li class='active'><a style="color: yellow; font-weight: bold;" id="username">USERNAME</a></li>
+                <li class='active'><a href='#' id="nav-home">Home</a></li>
                 <li><a href='#teste' id="nav-location">Show my Position</a></li>
                 <li><a href='#' id="nav-createuser"  data-toggle="modal" data-target="#createmodel">Create user</a></li>
             </ul>
@@ -89,7 +90,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-sm-offset-2 col-sm-10">
-                                    <button type="button" class="btn btn-default" id="save-btn">Save</button>
+                                    <button type="button" class="btn btn-primary" id="save-btn">Save</button>
                                     <button type="button" class="btn btn-danger" id="del-btn">Delete</button>
                                 </div>
                             </div>
@@ -173,7 +174,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-sm-offset-2 col-sm-10">
-                                    <button type="button" class="btn btn-default" id="create-btn">Create</button>
+                                    <button type="button" class="btn btn-primary" id="create-btn">Create</button>
                                 </div>
                             </div>
                         </form>
