--- a/Exercise/Ass1_March/restful-client/public_html/main.html
+++ b/Exercise/Ass1_March/restful-client/public_html/main.html
@@ -17,6 +17,7 @@
         <div id='cssmenu'>
             <ul>
                 <li class='active'><a style="color: yellow; font-weight: bold;" id="username">USERNAME</a></li>
+                <li class='active'><a  href="#" style="color: red; font-weight: bold;" id="logout">LOGOUT</a></li>
                 <li class='active'><a href='#' id="nav-home">Home</a></li>
                 <li><a href='#teste' id="nav-location">Show my Position</a></li>
                 <li><a href='#' id="nav-createuser"  data-toggle="modal" data-target="#createmodel">Create user</a></li>
