adapt to new api

--- a/Exercise/Ass1_March/restful-client/public_html/index.html
+++ b/Exercise/Ass1_March/restful-client/public_html/index.html
@@ -9,8 +9,11 @@ and open the template in the editor.
         <title>Mobile Web responsive</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="styles/login.css" rel="stylesheet"/>
         <link href="styles/materialPreloader.css" rel="stylesheet" />
+        <link href="styles/sweetalert.css" rel="stylesheet"/>
+        <link href="styles/login.css" rel="stylesheet"/>
+
+
     </head>
     <body>
         <!-- Mixins-->
@@ -65,6 +68,7 @@ and open the template in the editor.
         <!-- jQuery -->
         <script src="scripts/libs/jquery-1.9.1.min.js"></script>
         <script src="scripts/libs/materialPreloader.js"></script>
+        <script src="scripts/libs/sweetalert.min.js"></script>
         <!--Main script-->
         <script src="scripts/login.js"></script>
     </body>
